--- a/style.css
+++ b/style.css
@@ -1,112 +1,114 @@
-#mainbg {background-color: black;
-          width: 100%;
-          height: 100%;}
-#frame{background-color: #0a0a0a;
-        width: 80%;
-        height: 100%;
-        margin-left: 10%;
-        }
-#bgleft{width: 62%;
-        height: 90%;
-        float: right;
-        margin-top: 2%;
-        background-color: #3e3b3b;
-        }
-#bgright{width: 5%;
-         height: 90%;
-         float: left;
-         margin-top: 2%;
-        background-color: #3e3b3b;}
-#bgcenter{width:33%;
-         height: 100%;
-         float: right;
-         background-color: rgb(218, 186, 203);
-        }
-.img{float: right;
-     height: 100%;
-     align-content: center;
-     }
-#fonts{color: rgb(14, 13, 13);
-        background-color: rgb(202, 59, 138);
-        height: 5%;
-        width: 100%;}
-#font{width: 100%;
-        height: 5%;
-        margin-left: 20%;
-        color: rgba(201, 145, 173, 0.568);}
-#fon{width: 100%;
-      height: 40%;
-      color: #3e3b3b ;
-}  
-p{font-size: 40px;
-  color: white;
-  margin-left: 10%;
-  font-weight: 900;
-  margin-block-start: 0em;
-  margin-block-end: 0em;
-  }      
-h5{ color:rgba(202, 59, 138);
-    font-style: italic;
-    margin-left: 10%;
-    margin-block-start: 1em;
-    margin-block-end: 0em;
-    font-stretch: ultra-expanded;}
-h4{color: white;
-   font-size: larger;
-   float: left;
-   font-weight: lighter;
-   width: 70%;
-   margin-block-start: 1em;
-    margin-block-end: 0em;  
-}
-h2{ color: white;
-    font-size:smaller ;
-    font-weight: lighter;
-    margin-block-start: 1em;
-    margin-block-end: 0em; 
-    margin-left: 5%;}
-h3{font-weight: lighter;
-        width: 20%;
-        color:rgba(202, 59, 138);
-        margin-left: 2%;
-        font-style: italic;
-        float: left;
-        margin-block-start: 1em;
-         margin-block-end: 0em;
-}
-#contact{ margin-top: 40%;
-          height: 20%;
-          margin-bottom:0px;
-}
-h1{     font-size: 30px;
-        color: white;
-        margin-left: 10%;
-        font-weight: 900;
-    }
+#background{width: 100%;
+			height: 1000px;
+			background-color: #ADD8E6;}
+
+#logo{width: 100%;
+	  padding-top:  20px;
+	  text-align: center;}
+
+.logo{width: 20%;}
+
+a{color: white;}
+
+p{color: #4a5568;
+  width: 100%;
+  font-size: .875rem;
+  padding-top: 0px;
+  font-family: Karla,sans-serif;
+  margin-block-end:0px;
+  margin-block-start:0px;
+  text-align: center;
+	}
+
+#main{width: 40%;
+	  height: 800px;
+	  background-color: white;
+	  margin-left: 32.5%;
+	  border-radius: 20px;
+	  border-bottom-left-radius: 0px;
+	  
+	}
+
+.header{font-family: U8,sans-serif;
+	    font-size: 1.5rem;
+    	width: 100%;
+    	align-content: center;
+    	padding-top: 40px;
+    	color: #083e9e;
+    	margin-block-end:0px;
+    	margin-block-start:0px;
+    	box-sizing: 1.6em;
+    	text-align: center;
+    	}
+
+.form{
+	  box-sizing: border-box;
+	  padding-top: 20px;
+	  }
+
+.field{
+	   padding-left: 10px;
+	   padding-right: 10px;
+	   width: 100%;}
+
+.text{font-size: 12px;
+	  font-family: U8,sans-serif;
+	  width: 100%;
+	  font-weight: 700;
+	  color: #4a5568;
+	  line-height: 24px;
+	  }
 
 .input{
-width: 60%;
-padding: 6px;
-box-sizing: border-box;
-border-radius: .25rem;
-background-color:rgb(218, 186, 203);
-line-height:8px;
-margin-left:2%;
-margin-bottom: 1%;
+  width: 90%;
+  padding: 12px;
+  box-sizing: border-box;
+  border-radius: .25rem;
+  background-color: #edf2f7;
+  line-height:24px;
+  border: solid #e2e8f0;
+  margin-top: 10px;
+
 }
-.input1{
-        width: 50%;
-        padding: 24px;
-        box-sizing: border-box;
-        border-radius: .25rem;
-        background-color:rgb(218, 186, 203);
-        margin-left:2%;
-        margin-bottom: 1%;
-        }
-.send{background-color:rgba(202, 59, 138);
-        color: white;
-        padding: 8px;
-        text-align: center;
-      font-weight: 700;
-      font-size: 15px;
-     }
+
+.select{width: 90%;
+  padding: 12px;
+  box-sizing: border-box;
+  border-radius: .25rem;
+  background-color: white;
+  font-weight: 200;
+  font-size: 15px;
+  font-family: U8,sans-serif;
+  line-height:24px;
+  border: solid #e2e8f0;
+  margin-top: 10px;
+
+}
+.submit{line-height:28px;
+		width: 80%;
+		padding: 12px;
+		border-radius: 15px;
+		margin-left: 25px;
+		border-bottom-left-radius: 0px;
+		background-color: #083e9e;
+		margin-top: 30px;
+
+}
+.button{
+	background:#083e9e;
+  	color: white;
+  	padding: 15px;
+  	padding-right: 20px;
+  	padding-left: 150px;
+  	text-align: center;
+    border-bottom-style: none;
+    border-left-style:none;
+    border-image-width:0;
+	border-right-style:none;
+    border-top-style:none;
+	font-weight: 700;
+	font-size: 15px;
+	font-family:U8, sans-serif;
+	}
+.link{font-size: 15px;
+	  text-align: center;}
